changed padding spacing to margin spacing and fixed text wrapping issues

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -26,7 +26,7 @@
 .footer-content {
     font-weight: 300;
     cursor: pointer;
-    padding: 0px 0px 20px 0px
+    margin: 0px 0px 20px 0px
 }
 
 .border-line {
@@ -38,11 +38,11 @@
 .legal-column {
     display: flex;
     flex-direction: row;
-    padding: 20px 50px 20px 0px;
+    margin: 20px 50px 20px 0px;
 }
 
 .legal-info {
-    padding: 0px 20px 0px 0px;
+    margin: 0px 20px 0px 0px;
     font-weight: 200;
     font-size: 14px;
 }
@@ -50,56 +50,59 @@
 .legal-list {
     display: flex;
     flex-direction: row;
-    padding: 0px 20px 0px 0px;
+    margin: 0px 20px 0px 0px;
 
 }
 
 .legal-item {
-    padding: 0px 20px 0px 0px;
+    margin: 0px 20px 0px 0px;
     font-weight: 200;
     font-size: 14px;
+    cursor: pointer;
 }
 
 .econ-column {
     display: flex;
     flex-direction: row;
-    padding: 20px 50px 20px 150px;
+    margin: 20px 50px 20px 150px;
     font-weight: 200;
     font-size: 14px;
 }
 
 .econ-items {
-    padding: 0 20px 0 0;
+    margin: 0 20px 0 0;
+    cursor: pointer;
 }
 
 #lang svg {
     fill: black;
     width: 20px;
     height: 20px;
-    padding: 0 0px 0 0;
+    margin: 0 0px 0 0;
 }
 
 #lang {
     width: 20px;
     height: 20px;
-    padding: 0 10px 0 0;
+    margin: 0 10px 0 0;
 }
 
 
 .social-column {
     display: flex;
     flex-direction: row;
-    padding: 20px 50px 20px 0px;
+    margin: 20px 0px 20px 0px;
     font-weight: 200;
     font-size: 14px;
 }
 
 .social-items {
-    padding: 0 10px;
+    margin: 0 5px;
 }
 
 #facebook {
-    padding: 0 20px 0 0
+    margin: 0 15px 0 0;
+    cursor: pointer;
 }
 
 #facebook svg {
@@ -109,7 +112,8 @@
     fill: black;
 }
 #twitter {
-    padding: 0 25px;
+    padding: 0 20px;
+    cursor: pointer;
 }
 
 #twitter svg {
@@ -120,7 +124,8 @@
 }
 
 #insta{
-    padding: 0 0px 0 20px
+    margin: 0 0px 0 15px;
+    cursor: pointer;
 }
 
 #insta svg {
